# simple-settings

./: .bumpversion.cfg  .checkignore  .coveragerc  .editorconfig  .gitignore  .travis.yml  LICENSE  Makefile  README.md  README.rst  ROADMAP.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: main.yml  release.yml
docs/: index.md
examples/pipeline/: README.md  app.py  app_without_args.py  first_settings.py  second_settings.py
examples/pipepline/: README.md  second_settings.py
examples/simple/: app.py  app_without_env_or_args.py  project_settings.py
examples/tornado/: app.py
examples/tornado/settings/: base.py  development.py  production.py
examples/utils/: app.py  project_settings.py
simple_settings/: __init__.py  constants.py  core.py  dynamic_settings.py  special_settings.py  utils.py
simple_settings/dynamic_settings/: __init__.py  base.py  consul_reader.py  database_reader.py  memcached_reader.py  redis_reader.py  s3_reader.py
simple_settings/strategies/: __init__.py  cfg.py  environ.py  json_file.py  python.py  toml_file.py  types.py  yaml_file.py
tests/: test_custom_strategy.py  test_dynamic_settings.py  test_dynamic_settings_consul.py  test_settings.py  test_special_settings.py  test_strategy_cfg.py  test_strategy_json.py  test_strategy_python.py  test_strategy_yaml.py  test_strtobool.py  test_utils.py
tests/dynamic_settings/: test_consul.py  test_database.py  test_dynamic_settings.py  test_memcached.py  test_redis.py  test_s3.py
tests/samples/: base.py  complex.py  dynamic.py  foo.bar  invalid_toml_file.toml  key_value.cfg  python_obj.py  simple.py  simple_json_file.json  simple_toml_file.toml  simple_yaml_file.yaml  special.py  special_settings.py  special_settings_override_by_env.py  special_settings_required_settings.py  with_module_imported.py  without_import.py
tests/strategies/: test_cfg.py  test_environ.py  test_json.py  test_python.py  test_toml.py  test_yaml.py
